<?xml version="1.0"?>
<package>
  <name>dvo_core</name>
  <version>0.0.0</version>
  <description> catkin version for dvo_slam</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <!--<author>Christian Kerl</author>-->
  <!-- original work from Christian Kerl, modified for fitting catkin by Tongxi Lou -->
  <maintainer email="lou@magazino.eu">lou</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>GPL</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>sophus</build_depend>

  <run_depend>sophus</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
